# instapaper-cli

./: .gitignore  .oxfmtrc.json  .pinact.yaml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: oxfmt.yaml  release.yaml  secretlint.yaml  test.yaml
skills/instapaper-cli/: SKILL.md
src/: client.rs  main.rs
src/commands/: account.rs  auth.rs  bookmarks.rs  folders.rs  highlights.rs  mod.rs
