[package]
name = "instapaper-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for the Instapaper API"
license = "MIT"
repository = "https://github.com/yosmoc/instapaper-cli"

[[bin]]
name = "instapaper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.13", features = [
  "json",
  "query",
  "rustls",
  "form",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
oauth1-request = "0.6"
urlencoding = "2"
dirs = "6"
rpassword = "7"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
allow_attributes = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
